--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
         </div>
     </div>
     <header class="fixed h-[70.12px] sm:h-auto bg-white sm:bg-transparent sm:absolute z-30 w-full overflow-x-clip" id="transparentBGonScroll">
-        <div class="max-w-[1240px] bg-white sm:bg-transparent flex items-center m-auto p-4 justify-between " id="mainheaderAppear_disappear">
+        <div class="max-w-[1240px] bg-white sm:bg-transparent flex items-center m-auto p-4 justify-between transition-transform duration-300 ease-in-out" id="mainheaderAppear_disappear">
             <!-- desktop logo -->
             <figure class="hidden sm:block">
                 <img src="mediaFiles/Home page/Counter number/Hero section and logos/Logo.webp"
