--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+    <!-- mobile menu bg-overlay when menu open -->
+     <div id="overlaybottommenu" class="fixed inset-0 bg-black/50 backdrop-blur-sm z-30 hidden"></div>
+     
     <!-- assistance sticky button Desktop -->
     <div class="hidden sm:block">
         <div class="fixed right-[20.13px] bottom-[21.99px] z-20 flex items-end">
