--- a/src/location.html
+++ b/src/location.html
@@ -13,9 +13,15 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
 
+    <!-- intl-tel-input CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/css/intlTelInput.css" />
+
+
 </head>
 
 <body>
+    <!-- mobile menu bg-overlay when menu open -->
+     <div id="overlaybottommenu" class="fixed inset-0 bg-black/50 backdrop-blur-sm z-30 hidden"></div>
     <!-- assistance sticky button Desktop -->
     <div class="hidden sm:block">
         <div class="fixed right-[20.13px] bottom-[21.99px] z-20 flex items-end">
@@ -1491,14 +1497,13 @@
                         Get clarity on The Pinnacle Mohali project — everything you need to make an informed decision.
                     </p>
                 </div>
-                <div
-                    class="relative flex flex-col gap-[23px] w-full h-auto pr-2.5">
+                <div class="relative flex flex-col gap-[23px] w-full h-auto pr-2.5">
                     <div
                         class="flex flex-col py-[12px] w-full border-b-[0.5px] border-[#989797] gap-[6.74px] md:gap-[9px]">
                         <div class="flex w-full items-center justify-between">
                             <h3
                                 class="font-jost font-medium text-[17px] md:text-[20px] leading-[100%] text-[var(--main-blue)]">
-                                Where is The Pinnacle Mohali located?  </h3>
+                                Where is The Pinnacle Mohali located? </h3>
                             <div
                                 class="shrink-0 w-[25px] h-[25px] md:w-[28.01px] md:h-[28.01px] rounded-full bg-[var(--main-blue)] md:bg-[#F6F6F6] flex items-center justify-center cursor-pointer FAQButton">
                                 <i class="fa-solid fa-minus text-white md:text-[#173F63] text-[12px] "></i>
@@ -1506,8 +1511,9 @@
                         </div>
                         <p
                             class="text-[#2C2C2C] font-jost text-[16px] md:text-[18px] leading-[100%] hidden MakeVisibleOnclick">
-                            The Pinnacle is strategically located in Sector 83 Alpha, IT City, Mohali — near the International Airport and easily accessible via NH-152
-& Airport Road.</p>
+                            The Pinnacle is strategically located in Sector 83 Alpha, IT City, Mohali — near the
+                            International Airport and easily accessible via NH-152
+                            & Airport Road.</p>
                     </div>
                     <div
                         class="flex flex-col py-[12px] w-full border-b-[0.5px] border-[#989797] gap-[6.74px] md:gap-[9px]">
@@ -1550,7 +1556,7 @@
                         <div class="flex w-full items-center justify-between">
                             <h3
                                 class="font-jost font-medium text-[17px] md:text-[20px] leading-[100%] text-[var(--main-blue)]">
-                                What are the healthcare and shopping facilities around?  </h3>
+                                What are the healthcare and shopping facilities around? </h3>
                             <div
                                 class="shrink-0 w-[25px] h-[25px] md:w-[28.01px] md:h-[28.01px] rounded-full bg-[var(--main-blue)] md:bg-[#F6F6F6] flex items-center justify-center cursor-pointer FAQButton">
                                 <i class="fa-solid fa-plus text-white md:text-[#173F63] text-[12px] "></i>
@@ -1604,7 +1610,76 @@
             </div>
         </section>
 
+        <!-- Property consultant -->
+        <section class="py-[80px] bg-cover bg-center" style="background-image: var(--consultat-decorative-bg);">
+            <div class="max-w-[1234px] h-auto m-auto relative">
+                <!-- ppt icon fixed -->
+                <div class="absolute right-0 bottom-0 ">
+                    <figure class="w-[114.9082px] md:block hidden">
+                        <img src="./mediaFiles/Location/The Pinnacle PPT short 1.png" alt="pinnacle PPt"
+                            class="w-full h-full object-fill object-center">
+                    </figure>
+                </div>
+                <div class="w-full px-[16px] lg:px-0 gap-y-[19px] h-auto grid grid-cols-1 md:grid-cols-2">
+                    <div class="flex flex-col items-start justify-start gap-[42.2px]">
+                        <div class="flex flex-col gap-[10px]">
+                            <h3
+                                class="text-[#003253] font-jost font-medium text-[24px] md:text-[36px] leading-[33px] md:leading-[50px] tracking-[0%] ">
+                                <span class="font-normal">Talk to our property</span> <br />
+                                Consultant at Realty Nivesh
+                            </h3>
+                            <p
+                                class="font-normal md:font-medium text-[16px] md:text-[20px] text-[#474A49] leading-[28px] tracking-[2%]">
+                                Get verified details, pricing, and expert guidence for The Pinnacle Mohali.
+                            </p>
+                        </div>
+                        <div class="md:block hidden">
+                            <div class="flex flex-col items-start justify-start">
+                                <figure class="w-[317.0577px] h-[109.9973px]">
+                                    <img src="./mediaFiles/Location/pinnacle_reality_logo.png"
+                                        alt="partnership_comapies_Logo" class="w-full h-full object-fill object-center">
+                                </figure>
+                                <p>* We respect your privacy. Your details are secure.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-full">
+                        <form action="" class="flex flex-col items-start justify-start gap-[35px]">
+                            <input type="text" placeholder="Your Name"
+                                class="outline-none border-b border-[#BABABA] w-full placeholder-[#101010] font-normal text-[#101010] text-[16px] md:text-[17px]">
+                            <div class="flex flex-col items-start justify-start w-full gap-[9.56px] relative">
+                                <input id="mobile_code" type="tel" placeholder="Your Phone number* "
+                                    class="w-full px-3 placeholder-[#101010] py-2 text-[#101010] text-[16px] md:text-[17px]  focus:outline-none border-b border-[#BABABA]" />
+                                <span class="text-[#424141] leading-[100%] text-[12.6px] font-jost">You’ll receive OTP
+                                    via WhatsApp and SMS </span>
+                            </div>
+                            <input type="email" placeholder="Email Id"
+                                class="outline-none border-b border-[#BABABA] w-full placeholder-[#101010] font-normal text-[#101010] text-[16px] md:text-[17px]" />
 
+                            <div class="checkbox flex gap-[20px] items-start justify-end flex-row-reverse w-full">
+                                <div class="tag max-w-[383px] text-13px md:text-[16px]">I agree to receive newsletters,
+                                    or relevant marketing
+                                    content and  Pinnacle Terms and Conditions</div>
+                                <input type="checkbox" class="input-assumpte" id="input-confidencial">
+                                <label for="input-confidencial"></label>
+                            </div>
+                            <button type="submit"
+                                class="flex items-center justify-center text-[16px] md:text-[17px] font-medium font-jost w-[141px] md:w-[292px] h-[38px] md:h-[50px] text-white border border-[#F2F9FF] bg-[#003253]">Get
+                                OTP</button>
+                        </form>
+
+                    </div>
+                    <div class="md:hidden block">
+                        <div class="flex gap-[18px] items-start justify-start flex-col-reverse">
+                            <figure class="w-[226px] h-[78px] md:w-[317.0577px] md:h-[109.9973px]">
+                                <img src="./mediaFiles/Location/pinnacle_reality_logo.png"
+                                    alt="partnership_comapies_Logo" class="w-full h-full object-fill object-center">
+                            </figure>
+                            <p class="text-[14px] leading-[100%] tracking-[0%] text-[#514E4E]">* We respect your privacy. Your details are secure.</p>
+                        </div>
+                    </div>
+                </div>
+        </section>
     </main>
 
     <footer class="w-full h-max pt-[24px] flex flex-col gap-[15.16px] bg-cover bg-center relative"
@@ -2042,6 +2117,11 @@
     </footer>
 
 </body>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- intl-tel-input JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
+
 <!-- Swiper JS -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
