price page completed

--- a/src/location.html
+++ b/src/location.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- mobile menu bg-overlay when menu open -->
-     <div id="overlaybottommenu" class="fixed inset-0 bg-black/50 backdrop-blur-sm z-30 hidden"></div>
+    <div id="overlaybottommenu" class="fixed inset-0 bg-black/50 backdrop-blur-sm z-30 hidden"></div>
     <!-- assistance sticky button Desktop -->
     <div class="hidden sm:block">
         <div class="fixed right-[20.13px] bottom-[21.99px] z-20 flex items-end">
@@ -124,8 +124,10 @@
             id="mainheaderAppear_disappear">
             <!-- desktop logo -->
             <figure class="hidden sm:block">
-                <img src="mediaFiles/Home page/Counter number/Hero section and logos/Logo.webp"
-                    alt="pinnacle apartment logo" class="w-[162.72px]">
+                <a href="./index.html">
+                    <img src="mediaFiles/Home page/Counter number/Hero section and logos/Logo.webp"
+                        alt="pinnacle apartment logo" class="w-[162.72px]">
+                </a>
             </figure>
             <!-- Mobile logo -->
             <figure class="block sm:hidden">
@@ -139,8 +141,8 @@
                         <li><a href="#">About</a></li>
                         <li><a href="#">Products</a></li>
                         <li><a href="#">Plans</a></li>
-                        <li><a href="#">Location</a></li>
-                        <li><a href="#">Price</a></li>
+                        <li><a href="./location.html">Location</a></li>
+                        <li><a href="./price.html">Price</a></li>
                         <li><a href="#">Amenities</a></li>
                         <li><a href="#">Specification</a></li>
                         <li><a href="#">Gallery</a></li>
@@ -1675,7 +1677,8 @@
                                 <img src="./mediaFiles/Location/pinnacle_reality_logo.png"
                                     alt="partnership_comapies_Logo" class="w-full h-full object-fill object-center">
                             </figure>
-                            <p class="text-[14px] leading-[100%] tracking-[0%] text-[#514E4E]">* We respect your privacy. Your details are secure.</p>
+                            <p class="text-[14px] leading-[100%] tracking-[0%] text-[#514E4E]">* We respect your
+                                privacy. Your details are secure.</p>
                         </div>
                     </div>
                 </div>
