--- a/src/index.html
+++ b/src/index.html
@@ -134,8 +134,8 @@
                         <li><a href="#">About</a></li>
                         <li><a href="#">Products</a></li>
                         <li><a href="#">Plans</a></li>
-                        <li><a href="#">Location</a></li>
-                        <li><a href="#">Price</a></li>
+                        <li><a href="./location.html">Location</a></li>
+                        <li><a href="./price.html">Price</a></li>
                         <li><a href="#">Amenities</a></li>
                         <li><a href="#">Specification</a></li>
                         <li><a href="#">Gallery</a></li>
