copleted price page

--- a/src/price.html
+++ b/src/price.html
@@ -123,8 +123,8 @@
             <!-- desktop logo -->
             <figure class="hidden sm:block">
                 <a href="./index.html">
-                <img src="mediaFiles/Home page/Counter number/Hero section and logos/Logo.webp"
-                    alt="pinnacle apartment logo" class="w-[162.72px]">
+                    <img src="mediaFiles/Home page/Counter number/Hero section and logos/Logo.webp"
+                        alt="pinnacle apartment logo" class="w-[162.72px]">
                 </a>
             </figure>
             <!-- Mobile logo -->
@@ -720,7 +720,7 @@
                             class="Price_list py-[10px] px-[20px] font-jost font-medium text-[18px] bg-[#F2F2F2] hover:bg-[#003253] duration-200 text-[#003253] hover:text-white cursor-pointer capitalize">Price
                             List</button>
                         <button type="button"
-                            class="Price_list py-[10px] px-[20px] font-jost font-medium text-[18px] bg-[#F2F2F2] hover:bg-[#003253] duration-200 text-[#003253] hover:text-white cursor-pointer capitalize">Payment
+                            class="Price_list py-[10px] px-[20px] font-jost font-medium text-[18px] bg-[#003253] text-white cursor-pointer capitalize">Payment
                             Structure </button>
                         <button type="button"
                             class="Price_list py-[10px] px-[20px] font-jost font-medium text-[18px] bg-[#F2F2F2] hover:bg-[#003253] duration-200 text-[#003253] hover:text-white cursor-pointer capitalize">Current
@@ -744,54 +744,51 @@
                 <div
                     class=" w-full m-auto flex items-center justify-start md:justify-center gap-10 overflow-x-scroll no-scrollbar">
                     <button type="button"
-                        class="4BHK py-[6px] px-[24px] border border-[#173F63]  font-jost font-normal text-[16px] bg-white hover:bg-[#003253] duration-200 text-[#003253] hover:text-white cursor-pointer uppercase">4BHK</button>
+                        class="Apartmentbtn py-[6px] px-[24px] border border-[#173F63]  font-jost font-normal text-[16px] bg-white text-[#003253] cursor-pointer uppercase">4BHK</button>
                     <button type="button"
-                        class="3BHK py-[6px] px-[24px] border border-[#173F63] font-jost font-normal text-[16px] bg-white hover:bg-[#003253] duration-200 text-[#003253] hover:text-white cursor-pointer uppercase">3BHK</button>
+                        class="Apartmentbtn py-[6px] px-[24px] border border-[#173F63] font-jost font-normal text-[16px] bg-white text-[#003253] cursor-pointer uppercase">3BHK</button>
                     <button type="button"
-                        class="5BHK py-[6px] px-[24px] border border-[#173F63] font-jost font-normal text-[16px] bg-white hover:bg-[#003253] duration-200 text-[#003253] hover:text-white cursor-pointer uppercase">5BHK</button>
+                        class="Apartmentbtn py-[6px] px-[24px] border border-[#173F63] font-jost font-normal text-[16px] bg-white text-[#003253] cursor-pointer uppercase">5BHK</button>
                     <button type="button"
-                        class="PENTHOUSE py-[6px] px-[24px] border border-[#173F63] font-jost font-normal text-[16px] bg-white hover:bg-[#003253] duration-200 text-[#003253] hover:text-white cursor-pointer uppercase">PENTHOUSE</button>
+                        class="Apartmentbtn py-[6px] px-[24px] border border-[#173F63] font-jost font-normal text-[16px] bg-white text-[#003253] cursor-pointer uppercase">PENTHOUSE</button>
                 </div>
                 <div class="w-full flex flex-col gap-[35px]">
                     <div class="w-full flex items-center md:items-end justify-end">
                         <div class="md:hidden block w-full border border-[#D8D8D8]"></div>
                         <span
-                            class="text-[#003253] font-jost text-[20px] md:text-[26.46px] leading-[100%] capitalize text-nowrap">4
+                            class="dynamicheader text-[#003253] font-jost text-[20px] md:text-[26.46px] leading-[100%] capitalize text-nowrap">4
                             BHK Apartments</span>
                         <div class="w-full border border-[#D8D8D8]"></div>
                     </div>
                     <div
-                        class="flex items-center justify-center gap-[7.8px] md:gap-[39.5px] overflow-x-scroll no-scrollbar">
+                        class="dynamicbuttoninnerbtn w-full flex items-center justify-start xl:justify-center gap-[7.8px] md:gap-[39.5px] overflow-x-auto no-scrollbar whitespace-nowrap">
                         <div class="max-w-[210px] w-full flex flex-col items-center justify-center group">
                             <button
                                 class="cursor-pointer font-jost text-[17px] md:text-[20px] font-medium leading-[150%] text-[#003253]">Zenith
                                 Tower</button>
-                            <div
-                                class="w-full h-[3px] bg-[#D8D6D5] group-hover:bg-gradient-to-b from-[#FFC267] to-[#99753E]">
+                            <div class="w-full h-[3px] bg-gradient-to-b from-[#FFC267] to-[#99753E]">
                             </div>
                         </div>
                         <div class="max-w-[210px] w-full flex flex-col items-center justify-center group">
                             <button
                                 class="cursor-pointer font-jost text-[17px] md:text-[20px] font-medium leading-[150%] text-[#003253]">Crest
                                 Tower</button>
-                            <div
-                                class="w-full h-[3px] bg-[#D8D6D5] group-hover:bg-gradient-to-b from-[#FFC267] to-[#99753E]">
+                            <div class="w-full h-[3px] bg-[#D8D6D5]">
                             </div>
                         </div>
                         <div class="max-w-[210px] w-full flex flex-col items-center justify-center group">
                             <button
                                 class="cursor-pointer font-jost text-[17px] md:text-[20px] font-medium leading-[150%] text-[#003253]">Prime
                                 Tower</button>
-                            <div
-                                class="w-full h-[3px] bg-[#D8D6D5] group-hover:bg-gradient-to-b from-[#FFC267] to-[#99753E]">
+                            <div class="w-full h-[3px] bg-[#D8D6D5]">
                             </div>
                         </div>
                     </div>
                     <!-- desktop without swiper-->
-                    <div class="md:block hidden">
-                        <div class="w-full min-h-[385.77px] flex flex-col md:flex-row items-start justify-center">
+                    <div class="md:block hidden ">
+                        <div class="desktopMainData w-full min-h-[385.77px] flex flex-col md:flex-row items-start justify-center">
                             <figure class="w-full md:w-[40%] h-[-webkit-fill-available]">
-                                <img src="./mediaFiles/Price/guest-room.webp" alt="guest-room"
+                                <img src="${data.image}" alt="${towerName}"
                                     class="w-full h-full object-fill object-center">
                             </figure>
                             <div class="w-full md:w-[60%] px-[22px] py-[70px] h-full border border-[#EDECEC] bg-cover bg-center relative flex flex-col items-start gap-[42px]"
@@ -799,24 +796,21 @@
                                 <!-- Tag -->
                                 <div class="absolute -right-[13.5px] top-[5.66px]">
                                     <div
-                                        class="flex items-center justify-center gap-[6.91px] px-[13.5px] py-[10.16px] bg-[#C48B39] relative">
+                                        class="flex items-center justify-center gap-[6.91px] px-[13.5px] py-[10.16px] ${data.tag.bgcolor} relative">
                                         <!-- decorative -->
-                                        <img src="./mediaFiles/Price/decorative-2.svg" alt="diagnol_bg"
-                                            class="w-[11.831px] h-[6.17px] absolute -z-[1] -top-[2.6px] -right-[2.9px] object-fill object-center">
+                                        <div class="absolute -z-[1] -top-[9px] right-0 w-0 h-0 border-t-[10px] border-t-transparent border-b-[10px] border-b-transparent border-l-[15px] ${data.tag.arrowBg}"></div>
                                         <!-- content -->
-                                        <img src="./mediaFiles/Price/ion_diamond-sharp.webp" alt=""
+                                        <img src="${data.tag.tagIcon}" alt="${data.tag.tagName}"
                                             class="w-[16px] h-[16px] object-cover object-center">
-                                        <span class="text-white font-jost text-[13.825px] font-medium uppercase">Luxury
-                                            Zone</span>
+                                        <span class="text-white font-jost text-[13.825px] font-medium uppercase">${data.tag.tagName}</span>
                                         <!-- decorative -->
-                                        <img src="./mediaFiles/Price/decorative-2.svg" alt="diagnol_bg"
-                                            class="w-[11.831px] h-[6.17px] absolute -z-[1] -bottom-[3.5px] -right-[2.9px] object-fill object-center">
+                                        <div class="absolute -z-[1] -bottom-[9px] right-0 w-0 h-0 border-t-[10px] border-t-transparent border-b-[10px] border-b-transparent border-l-[15px] ${data.tag.arrowBg}">
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="flex flex-col items-start gap-[17.91px]">
                                     <h3
-                                        class="font-medium leading-[127%] tracking-[0.75px] capitalize text-[25px] text-[#003253]">
-                                        4 BHK – Zenith Tower</h3>
+                                        class="font-medium leading-[127%] tracking-[0.75px] capitalize text-[25px] text-[#003253]">${data.Headline}</h3>
                                     <div class="grid grid-cols-2 gap-y-[17.26px]">
                                         <div class="flex items-center justify-center gap-[15.47px]">
                                             <img src="./mediaFiles/Price/area_icon.webp" alt="area_icon"
@@ -826,8 +820,7 @@
                                                     class="font-jost text-[14px] font-medium capitalize text-[#003253]">Super
                                                     Area* </span>
                                                 <span
-                                                    class="text-[#474A49] font-jost text-[20px] font-medium">2,600-2,800
-                                                    sq. ft.</span>
+                                                    class="text-[#474A49] font-jost text-[20px] font-medium">${data.SuperArea}</span>
                                             </div>
                                         </div>
                                         <div class="flex items-center justify-center gap-[15.47px] ">
@@ -837,8 +830,7 @@
                                                 <span
                                                     class="font-jost text-[14px] font-medium capitalize text-[#003253]">Status</span>
                                                 <span
-                                                    class="text-[#474A49] font-jost text-[20px] font-medium xl:text-nowrap">Now
-                                                    Booking/Under Construction</span>
+                                                    class="text-[#474A49] font-jost text-[20px] font-medium xl:text-nowrap">${data.Status}</span>
                                             </div>
                                         </div>
                                         <div class="flex items-center justify-center gap-[15.47px]">
@@ -848,8 +840,7 @@
                                                 <span
                                                     class="font-jost text-[14px] font-medium capitalize text-[#003253]">Handover
                                                     Date</span>
-                                                <span class="text-[#474A49] font-jost text-[20px] font-medium">December
-                                                    2028</span>
+                                                <span class="text-[#474A49] font-jost text-[20px] font-medium">${data.HandoverDate}</span>
                                             </div>
                                         </div>
                                         <div class="flex items-center justify-center gap-[15.47px] ">
@@ -860,8 +851,7 @@
                                                     class="font-jost text-[14px] font-medium capitalize text-[#003253]">Furnishing
                                                 </span>
                                                 <span
-                                                    class="text-[#474A49] font-jost text-[20px] font-medium text-nowrap">SEMI
-                                                    FURNISHED</span>
+                                                    class="text-[#474A49] font-jost text-[20px] font-medium text-nowrap">${data.Furnishing}</span>
                                             </div>
                                         </div>
                                     </div>
@@ -885,7 +875,7 @@
                     </div>
                     <!-- mobile with swiper -->
                     <div class="md:hidden block">
-                        <div class="swiper priceaprtmentSlider">
+                        <div class="swiper priceaprtmentSlider mobileMainData">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide group ">
                                     <div
@@ -2092,7 +2082,7 @@
             </div>
         </section>
 
-         <!-- DownLoads & Pricing -->
+        <!-- DownLoads & Pricing -->
         <section class="w-full h-max pb-[80px] px-[16px] pt-[30px] md:pt-[0px] md:px-[0px]">
             <div class="w-full grid grid-cols-1 md:grid-cols-[60%_40%] gap-y-[19.03px]">
                 <figure class="w-full h-full">
@@ -2240,7 +2230,8 @@
                                 <img src="./mediaFiles/Location/pinnacle_reality_logo.png"
                                     alt="partnership_comapies_Logo" class="w-full h-full object-fill object-center">
                             </figure>
-                            <p class="text-[14px] leading-[100%] tracking-[0%] text-[#514E4E]">* We respect your privacy. Your details are secure.</p>
+                            <p class="text-[14px] leading-[100%] tracking-[0%] text-[#514E4E]">* We respect your
+                                privacy. Your details are secure.</p>
                         </div>
                     </div>
                 </div>
