--- a/src/price.html
+++ b/src/price.html
@@ -138,7 +138,7 @@
                         class="flex items-center gap-[23px] lg:text-[12px] xl:text-[17px] font-medium uppercase text-white font-jost">
                         <li><a href="#">About</a></li>
                         <li><a href="#">Products</a></li>
-                        <li><a href="#">Plans</a></li>
+                        <li><a href="./plan.html">Plans</a></li>
                         <li><a href="./location.html">Location</a></li>
                         <li><a href="./price.html">Price</a></li>
                         <li><a href="#">Amenities</a></li>
