completed plan page

--- a/src/plan.html
+++ b/src/plan.html
@@ -675,7 +675,7 @@
                 <div class="h-full">
                     <div class="relative h-full">
                         <figure class="absolute inset-0">
-                            <img src="./mediaFiles/Price/Banner.webp" alt="Banner"
+                            <img src="./mediaFiles/Plan/Plan/sllider.webp" alt="Banner"
                                 class="w-full h-full object-cover object-center">
                         </figure>
                         <!--Dark background overlap -->
@@ -683,27 +683,25 @@
                         <!-- content -->
                         <div
                             class="absolute z-20 w-full h-full flex flex-col items-center justify-center gap-0 md:gap-12">
-                            <figure class="w-[71.134px] h-[77px]  md:w-[99.3977px] md:h-[107.6809px]">
-                                <img src="./mediaFiles/Location/The Pinnacle PPT short 1.png" alt="pinnacle PPt"
-                                    class="w-full h-full object-cover object-center">
-                            </figure>
                             <div
                                 class=" w-max-[1064px] box-border px-[20.4px] gap-[20px] md:gap-0 flex flex-col items-center justify-center">
+                                <figure class="w-[71.134px] h-[77px]  md:w-[99.3977px] md:h-[107.6809px]">
+                                    <img src="./mediaFiles/Location/The Pinnacle PPT short 1.png" alt="pinnacle PPt"
+                                        class="w-full h-full object-cover object-center">
+                                </figure>
                                 <h3
                                     class="max-w-[849px] font-jost font-semibold lg:font-medium lg:leading-[61.43px] tracking-[2%] text-[24px] leading-[39px] lg:text-[50px] text-center text-white">
-                                    Pinnacle Mohali Price List <br>
-                                    3, 4, 5 BHK & Penthouse Apartments
+                                    Get Expert Guidance from <br>
+                                    Realty Nivesh
                                 </h3>
 
                                 <p
                                     class="max-w-[816px] font-jost text-[16px] lg:text-[23px] leading-[160%] text-center text-white font-normal">
-                                    Explore verified prices for luxury residences by STJ Group at The Pinnacle, Mohali.
-                                    One-time mobile verification gives you access to all pricing and floor plans
-                                    instantly.
+                                    Authorised Selling Partner for The Pinnacle by STJ Group, Mohali.
                                 </p>
                             </div>
                             <span class="font-jost text-[18px] leading-[160%] tracking-[0%] text-white mt-[18px]">Home
-                                << Price</span>
+                                << Plans</span>
                         </div>
                     </div>
                 </div>
@@ -1754,10 +1752,10 @@
                 <div class="flex flex-col items-start">
                     <h2
                         class="font-jost text-[#173150] font-semibold md:font-medium text-[24px] md:text-[40px] leading-[36px] md:leading-[60px] tracking-[0px]">
-                        Frequently asked questions</h2>
+                        Floor Plan FAQs – The Pinnacle, Mohali</h2>
                     <p
                         class="font-jost font-normal md:font-medium text-[16px] md:text-[20px] leading-[160%] md:leading-[28px] text-[#474A49]">
-                        “Clear answers to help you make informed decisions.”
+                        Answers to common queries about configurations, availability, furnishings, and future launches.
                     </p>
                 </div>
                 <div
@@ -1767,7 +1765,7 @@
                         <div class="flex w-full items-center justify-between">
                             <h3
                                 class="font-jost font-medium text-[17px] md:text-[20px] leading-[100%] text-[var(--main-blue)]">
-                                What is included in the price of an apartment at Pinnacle Mohali?
+                                What types of apartments are available at The Pinnacle Mohali?
                             </h3>
                             <div
                                 class="shrink-0 w-[25px] h-[25px] md:w-[28.01px] md:h-[28.01px] rounded-full bg-[var(--main-blue)] md:bg-[#F6F6F6] flex items-center justify-center cursor-pointer FAQButton">
@@ -1775,8 +1773,8 @@
                             </div>
                         </div>
                         <p class="text-[#2C2C2C] font-jost text-[16px] md:text-[18px] MakeVisibleOnclick">
-                            The price includes the base unit cost, super area, common area charges, and standard
-                            amenities. GST, PLC, registration, and furnishing (if applicable) are additional.
+                            We offer luxury 3 BHK, 4 BHK, 5 BHK apartments, and penthouse Sky Villas. Each configuration
+                            is designed to meet varying space and lifestyle needs.
                         </p>
                     </div>
                     <div
@@ -1784,7 +1782,7 @@
                         <div class="flex w-full items-center justify-between">
                             <h3
                                 class="font-jost font-medium text-[17px] md:text-[20px] leading-[100%] text-[var(--main-blue)]">
-                                Is there a payment plan available for new bookings?
+                                Are all apartment configurations currently available for booking?
                             </h3>
                             <div
                                 class="shrink-0 w-[25px] h-[25px] md:w-[28.01px] md:h-[28.01px] rounded-full bg-[var(--main-blue)] md:bg-[#F6F6F6] flex items-center justify-center cursor-pointer FAQButton">
@@ -1801,7 +1799,7 @@
                         class="flex flex-col py-[12px] w-full border-b-[0.5px] border-[#989797] gap-[6.74px] md:gap-[9px]">
                         <div class="flex w-full items-center justify-between">
                             <h3 class="font-jost font-medium text-[17px] md:text-[20px] text-[var(--main-blue)]">
-                                How do I unlock the apartment price?
+                                What is the typical size range of the apartments?
                             </h3>
                             <div
                                 class="shrink-0 w-[25px] h-[25px] md:w-[28.01px] md:h-[28.01px] rounded-full bg-[var(--main-blue)] md:bg-[#F6F6F6] flex items-center justify-center cursor-pointer FAQButton">
@@ -1818,7 +1816,7 @@
                         class="flex flex-col py-[12px] w-full border-b-[0.5px] border-[#989797] gap-[6.74px] md:gap-[9px]">
                         <div class="flex w-full items-center justify-between">
                             <h3 class="font-jost font-medium text-[17px] md:text-[20px] text-[var(--main-blue)]">
-                                Are there different prices for the same configuration in different towers?
+                                Can I download floor plans for each unit type?
                             </h3>
                             <div
                                 class="shrink-0 w-[25px] h-[25px] md:w-[28.01px] md:h-[28.01px] rounded-full bg-[var(--main-blue)] md:bg-[#F6F6F6] flex items-center justify-center cursor-pointer FAQButton">
@@ -1835,7 +1833,7 @@
                         class="flex flex-col py-[12px] w-full border-b-[0.5px] border-[#989797] gap-[6.74px] md:gap-[9px]">
                         <div class="flex w-full items-center justify-between">
                             <h3 class="font-jost font-medium text-[17px] md:text-[20px] text-[var(--main-blue)]">
-                                Can I download the floor plan after unlocking the price?
+                                Are penthouses or duplex units available?
                             </h3>
                             <div
                                 class="shrink-0 w-[25px] h-[25px] md:w-[28.01px] md:h-[28.01px] rounded-full bg-[var(--main-blue)] md:bg-[#F6F6F6] flex items-center justify-center cursor-pointer FAQButton">
@@ -1867,8 +1865,8 @@
                         <div class="flex flex-col gap-[10px]">
                             <h3
                                 class="text-[#003253] font-jost font-medium text-[24px] md:text-[36px] leading-[33px] md:leading-[50px] tracking-[0%] ">
-                                <span class="font-normal">Talk to our property</span> <br />
-                                Consultant at Realty Nivesh
+                                <span class="font-normal">Need Help Choosing</span> <br />
+                                the Right Floor Plan?
                             </h3>
                             <p
                                 class="font-normal md:font-medium text-[16px] md:text-[20px] text-[#474A49] leading-[28px] tracking-[2%]">
