--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
                         <li><a href="./plan.html">Plans</a></li>
                         <li><a href="./location.html">Location</a></li>
                         <li><a href="./price.html">Price</a></li>
-                        <li><a href="#">Amenities</a></li>
+                        <li><a href="./amenities.html">Amenities</a></li>
                         <li><a href="#">Specification</a></li>
                         <li><a href="#">Gallery</a></li>
                         <li><a href="#">Contact us</a></li>
