--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
                         <li><a href="./location.html">Location</a></li>
                         <li><a href="./price.html">Price</a></li>
                         <li><a href="./amenities.html">Amenities</a></li>
-                        <li><a href="#">Specification</a></li>
+                        <li><a href="./specification.html">Specification</a></li>
                         <li><a href="#">Gallery</a></li>
                         <li><a href="#">Contact us</a></li>
                     </ul>
