--- a/src/location.html
+++ b/src/location.html
@@ -144,8 +144,8 @@
                         <li><a href="./location.html">Location</a></li>
                         <li><a href="./price.html">Price</a></li>
                         <li><a href="./amenities.html">Amenities</a></li>
-                        <li><a href="#">Specification</a></li>
-                        <li><a href="#">Gallery</a></li>
+                        <li><a href="./specification.html">Specification</a></li>
+                        <li><a href="./gallery.html">Gallery</a></li>
                         <li><a href="#">Contact us</a></li>
                     </ul>
                 </div>
